@@ -12,6 +12,7 @@
 * New option ''tundev'' to explicitly set the TUN/TAP device, as in "tun1" or "tap3" (still be sure to use --usetap, if wanting TAP)
 * Depreceated option ''papalwaysok'' - it is considered always on
 * Better self determination of nasmac (Called-Station-Id) 
+* Sending ChilliSpot-Version attribute in access request
 	
 == ChangeLog (Coova Chilli v1.0.6 svn revision 66) ==
 
